apps/production/resume/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume
  namespace: resume
spec:
  template:
    spec:
      containers:
        - name: resume
