apps/production/resume/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: resume-route
  namespace: resume
spec:
  hostnames:
    - resume.fanen.dk
